done: onload时将本地的staticQuestions与用户的题目进度信息stage混合 todo：右侧列表弹出时显示每个subCategory的进度ui

--- a/miniprogram/miniprogram/pages/partOne/partOne.wxml
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxml
@@ -34,15 +34,13 @@
       name="{{category.categoryNameInChinese}}">
       <van-cell-group>
         <!-- todo van-cell 按题目进度显示的ui -->
-        <!-- todo van-cell 点击进入题目 -->
         <van-cell
           wx:for="{{category.subCategories}}" 
           wx:key="subIndex"
           wx:key-index="subIndex"        
           wx:for-item="subCategory"
-          title="{{subCategory.tagName}}"
-          value="{{ '01-21' }}"
-          label="{{ 3 }}" />
+          title="{{ subCategory.tagName }}"
+          label="{{ subCategory.stage }}" />
       </van-cell-group>
     </van-collapse-item>
   </van-collapse>
