--- a/miniprogram/miniprogram/pages/partOne/partOne.wxss
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxss
@@ -46,6 +46,31 @@ page {
   margin-bottom: 10px;
   color: #333;
 }
+.subCategoryHolder{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px dashed;
+  color: #333;
+}
+.cell-content{
+  width: 120px;
+  height: 20px;
+}
+.progress-bar {
+  width: 100%; /* 容器宽度 */
+  height: 20px; /* 高度 */
+  border-radius: 10px; /* 圆角样式，可选 */
+  overflow: hidden; /* 确保颜色不溢出 */
+  background: transparent; /* 默认透明背景 */
+}
+
+.progress-bar-inner {
+  width: 100%; /* 必须为100%，通过背景色控制填充 */
+  height: 100%;
+  background: linear-gradient(to right, #4caf50 var(--progress), transparent var(--progress));
+}
 
 .topic-list {
   margin-left: 20px;
@@ -65,12 +90,6 @@ page {
 .learning-summary-text {
   font-size: 16px;
   color: #333;
-}
-
-.progress-bar {
-  margin-top: 20px;
-  width: 100%;
-  text-align: center;
 }
 
 .progress-text {
