work plan： 1: 2.13-2.16 完成part1的前端逻辑；删除无效代码；数据库表的设计； 2: 2.17-2.23 完成part2，3的前端逻辑和数据库表的设计； 3: 2.24-2.28 用户登陆，转发推广，vip充值功能实现，打包上线完成。

--- a/miniprogram/miniprogram/pages/partOne/partOne.wxml
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxml
@@ -69,6 +69,9 @@
   <!-- todo 处理无用的css -->
   <!-- todo 处理表单的v-model的发送到后端的数据 -->
   <view class="card-container">
+    <view>
+      {{ chosenTag.tagName }}
+    </view>
     <view
     style="padding: 5px; margin-bottom: 10px;"
     class="card"
