part 1 页面 的问题list左右切换

--- a/miniprogram/miniprogram/pages/partOne/partOne.wxss
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxss
@@ -35,6 +35,10 @@ page {
   border-radius: 4px;
   cursor: pointer;
 }
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
 
 .topic-section {
   margin-top: 20px;
