--- a/miniprogram/miniprogram/pages/partOne/partOne.wxml
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxml
@@ -6,12 +6,11 @@
       <van-icon name="chart-trending-o" color="#1989fa" size="30px" bind:click="showLeftPanel"/>
     </view>
     <!-- 这里向左/tagName/向右：展示今天复习的问题和全新的问题列表 -->
-    <view style="text-align: center;display: flex;justify-content: space-around;"
-      class="page-title">
-      <van-icon name="arrow-left" bind:click="prevTag"/>
+    <view style="text-align: center;display: flex;justify-content: space-around;" class="page-title">
+      <van-icon name="arrow-left" bind:click="prevTag" :class="{ 'disabled': isPrevDisabled }" />
       <!-- todo [复习/new]判断 -->
-      {{chosenTag.tagName}}  [复习/new（done）]
-      <van-icon name="arrow" bind:click="nextTag"/>
+      {{chosenTag ? chosenTag.tagName : ''}}  [复习/new（done）]
+      <van-icon name="arrow" bind:click="nextTag" :class="{ 'disabled': isNextDisabled }" />
     </view>
   </view>
 </van-sticky>
