done:成功调用deepseek api！！！ todo: 1: 每个【生成】按钮的状态更改；2: 调用成功应该存入数据库的表里

--- a/miniprogram/miniprogram/pages/partOne/partOne.wxml
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxml
@@ -118,9 +118,9 @@
             value="{{ item.step1 }}"
             data-id="{{item.qId}}"
             bind:change="onInputStep1"
-            label="回答[中文]"
+            label="回答"
             type="textarea"
-            placeholder=""
+            placeholder="中英皆可，答案可为空，下同"
             maxlength="80"
             autosize
             border="{{ false }}"
