done: 1: 【生成】按钮的状态更改,及调用api成功失败时的提醒调整； todo: 2: 调用成功应该存入数据库的表里

--- a/miniprogram/miniprogram/pages/partOne/partOne.wxml
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxml
@@ -155,6 +155,8 @@
             round="true"
             plain
             data-id="{{item.qId}}"
+            disabled="{{ item.isButtonDisabled }}"
+            loading="{{item.isButtonLoading}}"
             bind:click="produceAnswer"
             >生成</van-button>
         </view>
@@ -206,7 +208,7 @@
 </view>
 </view>
 <!-- 选中的tag用户自主决定下次复习的时间 end -->
-
+<van-toast id="van-toast" type="fail" />
 <tab-bar active="0"></tab-bar>
 
 
