--- a/miniprogram/miniprogram/pages/partOne/partOne.wxss
+++ b/miniprogram/miniprogram/pages/partOne/partOne.wxss
@@ -168,6 +168,8 @@ page {
 }
 .card-footer {
   margin-top: 15px; /* 上部内容与按钮的间距 */
+  text-align: justify;
+  font-size: 16px;
 }
 .card-container {
   display: flex; /* 使用 Flexbox 布局 */
