todo: vip充值  非vip 推广看广告 复习时卡片翻页的效果（卡片题面附加答题技巧） part one， aboutMe无效css删除 done: 用户登陆授权openid，用户点击触发获取昵称和头像

--- a/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
+++ b/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
@@ -1,14 +1,17 @@
-<view>
-这里是aboutMe
-user 信息
-会员充值
-
+<view class="user-info">
+  <view class="avatar-container">
+    <image class="avatar" src="{{userInfo.avatarUrl}}" bindtap="updateUserProfile"></image>
+    <view wx:if="{{userInfo.isVip}}" style="display: flex;align-items: center;">
+    <image src="./../../assets/vip5.png" class="img-icon"></image>
+  </view>
+  </view>
+  <text class="nickname" bindtap="updateUserProfile">{{userInfo.nickname}}</text>
+</view>
+vip充值
+非vip 推广看广告
 <tab-bar active="3"></tab-bar>
 <!-- 页面报错&反馈&提升建议  
       todo 还需新增一个reportIssues页面去处理 start-->
-
 <view style="float: right; right: 20px; ">
   <van-icon name="question"  color="#1989fa" size="30px" bind:click="reportIssues"/>
-</view>
-<!-- 页面报错处理 end-->
 </view>
