doing: 首页设计：用户信息；推广激励设置；关于我们 todo: 复习时卡片翻页的效果（卡片题面附加答题技巧） part one无效css删除 vip充值 非vip 推广看广告 done: part one页面更改图标3.9 用户登陆授权openid，用户点击触发获取昵称和头像3.5

--- a/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
+++ b/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
@@ -7,8 +7,9 @@
   </view>
   <text class="nickname" bindtap="updateUserProfile">{{userInfo.nickname}}</text>
 </view>
-vip充值
-非vip 推广看广告
+放首页
+建议及意见
+关于我们
 <tab-bar active="3"></tab-bar>
 <!-- 页面报错&反馈&提升建议  
       todo 还需新增一个reportIssues页面去处理 start-->
