--- a/miniprogram/miniprogram/pages/index/index.wxss
+++ b/miniprogram/miniprogram/pages/index/index.wxss
@@ -1,34 +1,123 @@
-/**index.wxss**/
+.container {
+  width: 100vw; /* 宽度填满屏幕 */
+  height: calc(100vh - 100rpx); /* 减去底部 TabBar 高度 */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; /* 内容上下分布 */
+  align-items: center; /* 水平居中 */
+  padding: 20rpx;
+  box-sizing: border-box; /* 确保 padding 不影响宽高计算 */
+}
+/* 如果不同机型的 TabBar 高度不同，可以用 safe-area-inset-bottom 兼容 iPhoneX： */
+.container {
+  height: calc(100vh - 100rpx - env(safe-area-inset-bottom));
+}
+/* 用户信息卡片 */
+.user-card {
+  background: #fff;
+  padding: 30rpx;
+  border-radius: 20rpx;
+  box-shadow: 0 4rpx 10rpx rgba(0, 0, 0, 0.1);
+}
 
-.containerThreeparts {
-  padding: 30px 0;
-  margin-bottom: 30px;
+.user-info {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.avatar {
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+  margin-right: 20rpx;
+}
+
+.user-details {
+  display: flex;
+  align-items: center;
+}
+
+.nickname {
+  font-size: 32rpx;
+  font-weight: bold;
+}
+
+.vip-badge {
+  position: absolute;
+  left: 30rpx;
+  top: -10px;
+}
+
+.vip-icon {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+/* 刷题次数 */
+.question-count {
+  margin-top: 20rpx;
+  font-size: 28rpx;
+  font-weight: bold;
+  color: #ff5722;
+}
+
+.count {
+  font-size: 32rpx;
+  color: #f56c6c;
+}
+
+/* 分享区 */
+.share-section {
+  background: #f9f9f9;
+  margin-top: 30rpx;
+  padding: 20rpx;
+  border-radius: 20rpx;
+  text-align: center;
+}
+
+.share-title {
+  font-size: 28rpx;
+  color: #333;
+  font-weight: bold;
+}
+
+.share-buttons {
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  background-color: #def0e5;
+  margin-top: 20rpx;
 }
 
-.containerRecord{
+.share-btn {
+  background: #1989fa;
+  color: #fff;
+  border-radius: 10rpx;
+  padding: 10rpx 20rpx;
+  font-size: 28rpx;
+}
+
+/* 进度条 */
+.progress-container {
+  margin-top: 20rpx;
+  text-align: center;
+}
+
+/* 底部功能 */
+.footer-links {
+  margin-top: 30rpx;
   display: flex;
-  padding: 0 20px;
-  /* width: 100%; */
   justify-content: space-between;
+  font-size: 24rpx;
+  color: #666;
 }
-.containerLeftRecord {
-  width: 50%;
+
+.feedback {
   display: flex;
-  justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
-.containerNotebook{
-  width: 50%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-.containerNotebook image{
-  width: 100px;
-  height: 100px;
+
+.about-us {
+  color: #999;
+  font-size: 22rpx;
 }
