done:缓存重要字段防篡改；轮询查询被邀请人数更新对应ui字段； todo: 首页：其他 复习时卡片翻页的效果（卡片题面附加答题技巧） part one无效css删除 part two part three

--- a/miniprogram/miniprogram/pages/index/index.wxml
+++ b/miniprogram/miniprogram/pages/index/index.wxml
@@ -25,8 +25,8 @@
       <button open-type="share" class="share-btn">分享到朋友圈</button>
     </view>
     <view class="progress-container">
-      <text>已邀请：{{userInfo.inviteCount}} 人</text>
-      <progress percent="{{userInfo.inviteCount * 10}}" show-info="true"/>
+      <text>已邀请：{{inviteInfo.inviteCount}} 人</text>
+      <progress percent="{{ inviteInfo.invitePercent }}" show-info="true"/>
     </view>
   </view>
   <!-- 
