--- a/miniprogram/miniprogram/pages/index/index.wxml
+++ b/miniprogram/miniprogram/pages/index/index.wxml
@@ -12,12 +12,12 @@
     </view>
     <view class="question-count">
       <text>今日可刷题次数：</text>
-      <text class="count">{{numberOfUses}}</text>
+      <text class="count">{{userInfo.isVip ? '无限次' : numberOfUses}}</text>
     </view>
   </view>
 
   <!-- 分享小程序 -->
-  <view class="share-section">
+  <view class="share-section" wx:if="{{!userInfo.isVip}}">
     <text class="share-title">🎉 邀请好友得更多刷题机会 🎉</text>
     <view class="share-buttons">
       <button open-type="share" class="share-btn">分享到好友</button>
@@ -29,8 +29,27 @@
       <progress percent="{{ inviteInfo.invitePercent }}" show-info="true"/>
     </view>
   </view>
+  <view class="vip-section" wx:if="{{userInfo.isVip}}">
+    <view class="vip-container">
+      <view class="vip-header">
+        <image src="../../assets/pics/vip-badge.png" class="vip-badge"></image>
+        <text>欢迎，尊贵的VIP用户！</text>
+      </view>
+      <view class="vip-benefits">
+        <text>VIP特权</text>
+        <ul>
+          <li><image src="../../assets/pics/icon-unlimited1.png" class="vip-icon"></image> 无限刷题</li>
+          <!-- <li><image src="../../assets/pics/icon-exclusive1.png" class="vip-icon"></image> 专属题库</li> -->
+          <!-- <li><image src="../../assets/pics/icon-support1.png" class="vip-icon"></image> 优先客服支持</li> -->
+          <li><image src="../../assets/pics/icon-events1.png" class="vip-icon"></image> 定期的VIP专属活动或优惠</li>
+        </ul>
+      </view>
+      <view class="vip-animation">
+        <!-- 动态动画 -->
+      </view>
+    </view>
+  </view>
   <!-- 
-  分享出去后，新用户点进来，后端去检测是否是新用户（第一次使用）
   有20个？新用户即可获取终身vip 是否要用两端通知的那种
   宣传图片 -->
   <!-- 其他功能 -->
